--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -404,7 +404,7 @@
 						<img src="./image/Graph/Anualkwh_1.jpg" width="300" alt="Not Found">
 						<h4 style="color:blue; margin-left: 2.1cm;">Resposta a inclinação</h4>
 					</td>
-					<td ALIGN=LEFT width="30%">
+					<td ALIGN=LEFT width="50%">
 						<p>
 						Neste gráfico podemos ver um exemplo da diferença entre o rendimento de sistemas sem controlo de orientação, 
 						orientação parcial e total.
@@ -620,7 +620,7 @@
 				<td WIDTH=65% VALIGN=TOP>
 					<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; border: none; padding: 0cm">
 						Neste projecto foi utilizado um microcontrolador da Atmel especicifamente o 
-						<span style="color:blue;"> Atmega 128 </span> <A HREF="#Ref12"><span>[12]</span></A>. Foi usado o programador <span style="color:blue;">Atmel Ice</span>
+						<span style="color:blue;"> Atmega 128 </span> <A HREF="#Ref9"><span>[9]</span></A> <A HREF="#Ref12"><span>[12]</span></A>. Foi usado o programador <span style="color:blue;">Atmel Ice</span>
 						também do mesmo fabricante, na qual veio a ser muito útil especialmente em combinação com o 
 						<span style="color:blue;"> Atmel Studio 7 </span>, este tem disponivel programação via <b> ISP </b> e 
 						<b> JTAG </b>, ao lado esta o kit de programação e as fichas de programação indicando as connecções.
