--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -676,8 +676,7 @@
 					<br>
 				</li>
 				<li> LCD 20x4 Blue NHD-0420DZ-NSW-BBW <br>
-					&nbsp; &nbsp; &nbsp; 4x20 Characters HD44780 compatible <br>
-					<br>
+					&nbsp; &nbsp; &nbsp; 4x20 Characters HD44780 compatible
 				</li>
 			</ul>
 		</div>
@@ -701,19 +700,17 @@
 					<br>
 				</li>
 				<li> KEYPAD4X4W <br>
-					&nbsp; &nbsp; &nbsp; 16 Button Keypad. switch <br>
-					<br>
+					&nbsp; &nbsp; &nbsp; 16 Button Keypad. switch
 				</li>
 			</ul>
 		</div>
 		</div>
-		<br>
 		<a href="https://www.ptrobotics.com/" target="_blank">
-			<it style="margin-left: 40px;"> https://www.ptrobotics.com/ </it>
+			<it style="margin-left: 40px; color:green; "> https://www.ptrobotics.com/ </it>
 		</a>
 		<br>
 		<a href="https://www.futurlec.com/index.shtml" target="_blank">
-			<it style="margin-left: 40px;"> https://www.futurlec.com/index.shtml </it>
+			<it style="margin-left: 40px; color:green; "> https://www.futurlec.com/index.shtml </it>
 		</a>
 		<br>
 	</P>
