--- a/Relatorio_2/LabsisWebPage/index.html
+++ b/Relatorio_2/LabsisWebPage/index.html
@@ -5,13 +5,6 @@
 <!-- charset reset -->
 <META charset="UTF-8">
 <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=windows-1252">
-<!-- KaTeX requires the use of the HTML5 doctype. Without it, KaTeX may not render properly -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.css" integrity="sha384-D+9gmBxUQogRLqvARvNLmA9hS2x//eK1FhVb9PiU86gmcrBrJAQT8okdJ4LMp2uv" crossorigin="anonymous">
-<!-- The loading of KaTeX is deferred to speed up page rendering -->
-<script src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.js" integrity="sha384-483A6DwYfKeDa0Q52fJmxFXkcPCFfnXMoXblOkJ4JcA8zATN6Tm78UNL72AKk+0O" crossorigin="anonymous"></script>
-<!-- To automatically render math in text elements, include the auto-render extension: -->
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/contrib/auto-render.min.js" integrity="sha384-yACMu8JWxKzSp/C1YV86pzGiQ/l1YUfE8oPuahJQxzehAjEt2GiQuy/BIvl9KyeF" crossorigin="anonymous"
-onload="renderMathInElement(document.body);"></script>
 <TITLE>
 	LABSIS Sun-track
 </TITLE>
@@ -328,7 +321,7 @@ onload="renderMathInElement(document.body);"></script>
         	<BR/>
         	<P ALIGN=CENTER STYLE="margin-bottom: 0.5cm; background: #eeeeee">
 				<A HREF="https://www.youtube.com/watch?v=xNV38nq1fqc" target="_blank">
-				 	<IMG SRC="image/sample_1.gif" NAME="Demo_1" ALIGN=BOTTOM WIDTH=250 BORDER=0>
+				 	<IMG SRC="image/sample_1.gif" NAME="Demo_1" ALIGN=BOTTOM WIDTH=250 alt="Not Found" BORDER=0>
 				</A>
 			</P>
 		</TD>
@@ -581,16 +574,17 @@ onload="renderMathInElement(document.body);"></script>
 			e baixo consumo energético.
 		</P>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-				<img src="image/arquitecture/Harvard_architecture.png" width="450">
+				<img src="image/arquitecture/Harvard_architecture.png" alt="Not Found" width="450">
 				<br>
 				<h4 style="color:blue; margin-left: 4.5cm;">Harvard Architecture<h4>
 		</P>
 	</section>
 	<section><h3>Diagrama de blocos do projecto</h3>
 		<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
-		<br>
-		<br>
-		<br>
+			<img src="image/Diagrama_de_Blocos/Diagram.jpg" alt="Not Found" width="450">
+			<br>
+			<br>
+			<br>
 		</P>
 	</section>
 </DIV>
@@ -651,16 +645,16 @@ onload="renderMathInElement(document.body);"></script>
 					</p>
 				</td>
 				<td WIDTH=25% VALIGN=TOP>
-					<IMG SRC="image/software/programmer/Atmel_Ice.png" NAME="ISP_6PIN" ALIGN=BOTTOM WIDTH=250 BORDER=0>
+					<IMG SRC="image/software/programmer/Atmel_Ice.png" NAME="ISP_6PIN" ALIGN=BOTTOM alt="Not Found" WIDTH=250 BORDER=0>
 						<br>
 						<br>
 						<div>
 							<div>
-								<IMG SRC="image/software/ISP_JTAG/isp_6pin.png" NAME="ISP_6PIN" ALIGN=BOTTOM WIDTH=250 BORDER=0>
+								<IMG SRC="image/software/ISP_JTAG/isp_6pin.png" NAME="ISP_6PIN" ALIGN=BOTTOM WIDTH=250 alt="Not Found" BORDER=0>
 							</div>
 							<BR/>
 							<div>
-								<IMG SRC="image/software/ISP_JTAG/isp_connector.png" NAME="ISP_CONNECTOR" ALIGN=BOTTOM WIDTH=250 BORDER=0>
+								<IMG SRC="image/software/ISP_JTAG/isp_connector.png" NAME="ISP_CONNECTOR" ALIGN=BOTTOM WIDTH=250 alt="Not Found" BORDER=0>
 							</div>
 						</div>
 				</td>
@@ -739,17 +733,17 @@ onload="renderMathInElement(document.body);"></script>
 		tornado-se num sistema de <span style="color:blue;"> plug and play </span>. A lista de material esta acima representado.
 		<br>
 		<div STYLE="margin-left: 12px;">
-			<!--<img src="image/hardware/chips_1.jpg" width="150">-->
-			<!--<img src="image/hardware/DevBoard_1.jpg" width="150">-->
-			<!--<img src="image/hardware/DevBoard_2.jpg" width="150">-->
-			<!--<img src="image/hardware/ESP8266_1.jpg" width="150">-->
-			<!--<img src="image/hardware/HC595_1.jpg" width="150">-->
-			<img src="image/hardware/Kit_1.jpg" width="250">
-			<!--<img src="image/hardware/PCF8563_1.jpg" width="300">-->
-			<!--<img src="image/hardware/INA128_1.jpg" width="200">-->
-			<!--<img src="image/hardware/HC595_2.jpg" width="200">-->
-			<!--<img src="image/hardware/RS2_1.jpg" width="200">-->
-			<!--<img src="image/hardware/Power_Supply_1.jpg" width="200">-->
+			<!--<img src="image/hardware/chips_1.jpg" alt="Not Found" width="150">-->
+			<!--<img src="image/hardware/DevBoard_1.jpg" alt="Not Found" width="150">-->
+			<!--<img src="image/hardware/DevBoard_2.jpg" alt="Not Found" width="150">-->
+			<!--<img src="image/hardware/ESP8266_1.jpg" alt="Not Found" width="150">-->
+			<!--<img src="image/hardware/HC595_1.jpg" alt="Not Found" width="150">-->
+			<img src="image/hardware/Kit_1.jpg" alt="Not Found" width="250">
+			<!--<img src="image/hardware/PCF8563_1.jpg" alt="Not Found" width="300">-->
+			<!--<img src="image/hardware/INA128_1.jpg" alt="Not Found" width="200">-->
+			<!--<img src="image/hardware/HC595_2.jpg" alt="Not Found" width="200">-->
+			<!--<img src="image/hardware/RS2_1.jpg" alt="Not Found" width="200">-->
+			<!--<img src="image/hardware/Power_Supply_1.jpg" alt="Not Found" width="200">-->
 		</div>
 	</section>
 	<P ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px;">
@@ -800,7 +794,7 @@ onload="renderMathInElement(document.body);"></script>
 			<div style="vertical-align: top;">
 				<div style="margin-left: 12px; margin-right: 20px; vertical-align: top; width: 25%; display:inline-block;">
 					<A HREF="https://www.microchip.com/mplab/microchip-studio" target="_blank">
-						<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 BORDER=0>
+						<IMG SRC="image/software/Atmel_Studio_7_1.bmp" NAME="Atmel Studio 7" ALIGN=LEFT WIDTH=200 alt="Not Found" BORDER=0>
 					</A>
 				</div>
 				&nbsp;
@@ -830,10 +824,10 @@ onload="renderMathInElement(document.body);"></script>
 					<TD WIDTH=5%>
 					</TD>
 					<TD WIDTH=50%>
-					<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="flowchart_1" ALIGN=BOTTOM WIDTH=400 BORDER=0>
+					<IMG SRC="image/fluxograma/flowchart_1.gif" NAME="flowchart_1" ALIGN=BOTTOM WIDTH=400 alt="Not Found" BORDER=0>
 					</TD>
 					<TD VALIGN=TOP>
-						<IMG SRC="image/fluxograma/flowchart_2.gif" NAME="flowchart_2" ALIGN=BOTTOM WIDTH=100 BORDER=0>
+						<IMG SRC="image/fluxograma/flowchart_2.gif" NAME="flowchart_2" ALIGN=BOTTOM WIDTH=100 alt="Not Found" BORDER=0>
 					</TD>
 				</TR>
 			</TABLE>
@@ -849,15 +843,15 @@ onload="renderMathInElement(document.body);"></script>
 			mas só uma única vez.
 			<BR/>
 			<p ALIGN=LEFT>
-				<IMG SRC="image/code/code_main_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 BORDER=0> &nbsp;
-				<IMG SRC="image/code/code_while_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 BORDER=0> &nbsp;
-				<IMG SRC="image/code/code_interrupt_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 BORDER=0>
+				<IMG SRC="image/code/code_main_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Not Found" BORDER=0> &nbsp;
+				<IMG SRC="image/code/code_while_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Not Found" BORDER=0> &nbsp;
+				<IMG SRC="image/code/code_interrupt_1.jpg" NAME="While_loop_resumed" ALIGN=TOP HEIGHT=330 alt="Not Found" BORDER=0>
 			</p>
 			<BR/>
 			Assim temos um sistema escalavel (<it><b>"recursion"</b></it>) e de fácil manuseamento.
 			<BR/>
 			<p ALIGN=CENTER>
-				<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=500 HEIGHT=300 BORDER=0>
+				<IMG SRC="image/fluxograma/flowchart_general_2.gif" NAME="flowchart_general_2" ALIGN=TOP WIDTH=500 HEIGHT=300 alt="Not Found" BORDER=0>
 			</p>
 		</p>
 	</section>
@@ -1038,13 +1032,13 @@ onload="renderMathInElement(document.body);"></script>
 	<p ALIGN=LEFT STYLE="margin-left: 12px; margin-right: 20px; font-size: 95%; border: none; padding: 0cm">
 		<a href="Pages/page_1.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 1 </span></a>
 		<a href="Pages/page_2.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 2 </span></a>
-		<a href="Pages/page_3.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 3 </span></a>
-		<a href="Pages/page_4.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 4 </span></a>
-		<a href="Pages/page_5.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 5 </span></a>
-		<a href="Pages/page_6.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 6 </span></a>
-		<a href="Pages/page_7.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 7 </span></a>
-		<a href="Pages/page_8.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 8 </span></a>
-		<a href="Pages/page_9.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> Page 9 </span></a>
+		<a href="Pages/page_3.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 3 </span></a>
+		<a href="Pages/page_4.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 4 </span></a>
+		<a href="Pages/page_5.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 5 </span></a>
+		<a href="Pages/page_6.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 6 </span></a>
+		<a href="Pages/page_7.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 7 </span></a>
+		<a href="Pages/page_8.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 8 </span></a>
+		<a href="Pages/page_9.html"><span style="color:red;margin-right:1.25em; display:inline-block;"> &nbsp; Page 9 </span></a>
 	</p>
 </DIV>
 <!-- ***Menu 7*** -->
