--- a/Relatorio_2/LabsisWebPage/modelo/Pages/page_6.html
+++ b/Relatorio_2/LabsisWebPage/modelo/Pages/page_6.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- KaTeX requires the use of the HTML5 doctype. Without it, KaTeX may not render properly -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.css" integrity="sha384-D+9gmBxUQogRLqvARvNLmA9hS2x//eK1FhVb9PiU86gmcrBrJAQT8okdJ4LMp2uv" crossorigin="anonymous">
+<!-- The loading of KaTeX is deferred to speed up page rendering -->
+<script src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/katex.min.js" integrity="sha384-483A6DwYfKeDa0Q52fJmxFXkcPCFfnXMoXblOkJ4JcA8zATN6Tm78UNL72AKk+0O" crossorigin="anonymous"></script>
+<!-- To automatically render math in text elements, include the auto-render extension: -->
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.10.0-rc.1/dist/contrib/auto-render.min.js" integrity="sha384-yACMu8JWxKzSp/C1YV86pzGiQ/l1YUfE8oPuahJQxzehAjEt2GiQuy/BIvl9KyeF" crossorigin="anonymous"
+onload="renderMathInElement(document.body);"></script>
 <meta charset="UTF-8">
 <title>
   Page 6
@@ -40,5 +47,10 @@
 <p style="text-indent: 40px">This text is indented.</p>
 <HR/>
 <blockquote>This text would be indented</blockquote>
+<hr>
+<p>\(x^2 = \sqrt{y}\)</p>
+<br>
+<p style="color:blue;font-size:25px;">\(\frac {-b\pm\sqrt{b^2 - 4ac}}{2a}\)</P>
 </body>
 </html>
+      
